# wasm-demo

./: .gitignore  .prettierignore  README.md  eslint.config.mjs  next.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json
.devcontainer/: Dockerfile  compose.yml  devcontainer.json
.github/: dependabot.yml
.github/workflows/: build.yml  e2e.yml  rust.yml  typescript.yml
docs/: 404.html  __next.__PAGE__.txt  __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  index.html  index.txt
docs/404/: index.html
docs/_not-found/: __next._full.txt  __next._head.txt  __next._index.txt  __next._not-found.__PAGE__.txt  __next._not-found.txt  __next._tree.txt  index.html  index.txt
docs/create/: __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  __next.create.__PAGE__.txt  __next.create.txt  index.html  index.txt
docs/extract/: __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  __next.extract.__PAGE__.txt  __next.extract.txt  index.html  index.txt
e2e/: create.spec.ts  extract.spec.ts  helpers.ts  home.spec.ts
pna_wasm/: Cargo.toml  Dockerfile  build-image.sh  wasm-pack.sh
pna_wasm/src/: lib.rs
src/app/: globals.css  layout.tsx  page.module.css  page.tsx
src/components/: BackButtom.module.css  BackButton.module.css  BackButton.tsx  Button.module.css  Button.tsx  Card.module.css  Card.tsx  CodeBlock.module.css  CodeBlock.tsx  DripArea.tsx  DropArea.module.css  DropArea.tsx  SiteHeader.module.css  SiteHeader.tsx
src/lib/: extractWorker.ts  formatError.ts
(+386 files in other folders)
