[package]
name = "pna"
version = "0.0.0"
authors = ["ChanTsune <41658782+ChanTsune@users.noreply.github.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/Portable-Network-Archive/wasm-demo.git"
description = "pna wasm binding"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
libpna = { version = "0.17.1", features = ["wasm"] }
js-sys = "0.3"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.43"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
web-sys = { version = "0.3.70", features = ["File"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.43"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
